<resources>
    <string name="app_name">MEET</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_list">Список заходів</string>
    <string name="menu_filters">Фильтры</string>
    <string name="menu_my_list">Мої заходи</string>
    <string name="menu_create">Створити захід</string>
    <string name="menu_my_meet">Мои MEET</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_exit">Вийти</string>

    <integer name="card_flip_duration_full">1000</integer>
    <integer name="card_flip_duration_half">500</integer>

    <!--PARTYINFO-->
    <string name="amount">Кількість людей:</string>
    <string name="date">Дата проведення:</string>
    <string name="category">Категорії:</string>
    <string name="price">Плата за вхід:</string>
    <string name="title_activity_maps">Map</string>
    <string name="address">Місцезнаходження:</string>
    <!--PARTYINFO-->

    <!--CREATEPARTY-->
    <string name="errorTitle">Введіть назвуе</string>
    <string name="errorDescription">Опис не може бути порожнім</string>
    <string name="errorPrice">Введіть ціну за вхід</string>
    <string name="errorPriceInfo">Введіть альтернативу ціні</string>
    <string name="errorAmount">Введіть кількість людей</string>

    <item type="id" name="ID_TAG"/>
    <item type="id" name="PRESSED_TAG"/>

    <string name="createPartyTitle">Назва</string>
    <string name="createPartyPrice">Ціна</string>
    <string name="createPartyPriceInfo">Альтернатива ціні</string>
    <string name="createChoosePhoto">Вибрати фото</string>
    <string name="createLocation">Місцеположення</string>
    <string name="createDescription">Опис</string>
    <string name="createDate">Дата проведення:</string>
    <string name="createTime">Час проведення:</string>
    <!--CREATEPARTY-->

    <!--REGISTER-->
    <string name="registerErrorEmailExist">Користувач з вказаним E-mail вже існує</string>
    <string name="registerErrorEmail">Введіть E-mail в правильному форматі</string>
    <string name="registerErrorPassword">Пароль повинен містити від 8 символів включаючи прописну і велику літеру латинського алфавіту</string>
    <string name="registerErrorPasswordRepeat">Повторіть пароль</string>
    <string name="registerErrorPhone">Введіть телефон в форматі +380</string>
    <string name="registerErrorName">Введіть ім\'я</string>
    <string name="registerErrorAbout">Введіть дані про себе</string>

    <string name="loginError">E-mail або пароль невірні</string>


    <string name="registerButton">Зареєструватися</string>

    <string name="registerSubmit">Зареєструватися</string>
    <string name="registerChoosePhoto">Вибрати фото</string>
    <string name="registerEmail">E-mail</string>
    <string name="registerDate">Дата народження:</string>
    <string name="registerPhone">Телефон</string>
    <string name="registerPassword">Пароль</string>
    <string name="registerPasswordRepeat">Повторіть пароль</string>
    <string name="registerAbout">Про себе</string>
    <string name="registerName">Ім\'я</string>




    <string name="google_maps_key" translatable="false" templateMergeStrategy="preserve">AIzaSyAmwsxyN5Apc1gNDCxXEQQ0QsJKc75hHAE</string>
    <!--REGISTER-->




</resources>
