<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <!--<item-->
                <!--android:id="@+id/nav_home"-->
                <!--android:icon="@drawable/ic_menu_camera"-->
                <!--android:title="@string/menu_home"/>-->
        <item
                android:id="@+id/create_party"
                android:icon="@drawable/ic_dance"
                android:title="@string/menu_create"/>
        <item
                android:id="@+id/nav_list"
                android:icon="@drawable/ic_birthday"
                android:title="@string/menu_list"/>
        <item
                android:id="@+id/nav_my_list"
                android:icon="@drawable/ic_party_list"
                android:title="@string/menu_my_list"/>
        <item
                android:id="@+id/nav_my_meets"
                android:icon="@drawable/ic_meets"
                android:title="@string/menu_my_meet"/>
    </group>

    <item android:title="Выйти">
        <menu>
            <!--<item-->
                    <!--android:id="@+id/nav_share"-->
                    <!--android:icon="@drawable/ic_menu_share"-->
                    <!--android:title="@string/menu_share"/>-->
            <item
                    android:id="@+id/nav_exit"
                    android:icon="@drawable/ic_exit_fill"
                    android:title="@string/menu_exit"/>
        </menu>
    </item>

</menu>
